# afofi

./: .gitignore  README.md  pyproject.toml
afofi/: __main__.py
tests/: test_afofi.py
