[tool.poetry]
name = "afofi"
version = "0.1.0"
description = "An async Python library to help with implementing the data fan-out/fan-in pattern."
authors = ["a-poor <45295232+a-poor@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
